# banjackal.github.io

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  about.md  about.md.bkp  kavikrossing.html  rocket.html  test.md
_drafts/: conduit_aws.md  ocr_webapp.md  rust_lambda_pt2.md  rust_lambda_pt3.md  rust_lambda_pt4.md  surveillance_setup.md  test-post.md
_posts/: 2023-02-08-welcome-to-jekyll.markdown  2023-02-10-unit-testing.md  2023-03-31-self-host-camera-pt1.md  2023-04-04-c_sharp_testing_automock.md  2023-04-11-learning-rust-and-aws-lambda-pt1.md  2023-04-25-rust-and-lambda-pt2.md  2023-04-25-rust_lambda_pt3.md  2023-05-12-python-polymorphism.md  2023-10-10-cloudfront-functions.md  2025-04-03-aws_system_patterns.md
aot_lambda/: Program.cs  aot_lambda.csproj
aot_lambda/Properties/: launchSettings.json
aot_lambda/Services/: AsyncCounter.cs
c-sharp/code/: Bar.cs  Foo.cs  Program.cs  c-sharp.csproj
c-sharp/tests/: Bar_Unit_Test.cs  SpecBase.cs  tests.csproj
express-ts/: package.json
express-ts/src/: index.ts
go/: go.mod
html_to_pdf_python/: main.py
lambda_comparison/python/: lambda_function.py  requirements.txt
lambda_comparison/rust-image-processor/: Cargo.toml
lambda_comparison/rust-image-processor/src/: main.rs
lambda_comparison/terraform/: .terraform.lock.hcl  dynamodb.tf  lambdas.tf  s3.tf  s3_event_trigger.tf  terraform.tf
python/: deprecated_option.py  errors.py  foo_click.py  polymorphism.py  polymorphism_demo.py  print_env.py  test_print_env.py
rust/add/: Cargo.toml
typescript/: index.js  index.ts  package.json
(+16 files in other folders)
